=== JavaScriptCore-416.11 ===

2005-09-30  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-Den-branch

    2005-09-29  Geoffrey Garen  <ggaren@apple.com>

		- Second cut at fixing <rdar://problem/4275206> Denver Regression: Seed: 
		Past Editions of Opinions display "NAN/Undefined" for www.washingtonpost.com
		
        Reviewed by mjs.

        * kjs/date_object.cpp:
        (KJS::KRFCDate_parseDate): Intead of creating a timezone when one isn't specified,
        just rely on the fallback logic, which will do it for you. Also, return invalidDate
        if the date includes trailing garbage. (Somewhat accidentally, the timezone logic
        used to catch trailing garbage.)

=== JavaScriptCore-416.10 ===

2005-09-28  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-Den-branch

    2005-09-28  Geoffrey Garen  <ggaren@apple.com>

	    - Fixed <rdar://problem/4275206> Denver Regression: Seed: Past Editions of Opinions display 
	     "NAN/Undefined" for www.washingtonpost.com

        Reviewed by darin.

        * kjs/date_object.cpp:
        (KJS::KRFCDate_parseDate): If the timezone isn't specified, rather than returning
        invalidDate, substitute the local timezone. This matches the behavior of FF/IE.

2005-09-27  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-Den-branch

    2005-09-26  Geoffrey Garen  <ggaren@apple.com>

        - Fixed <rdar://problem/4244084> Denver Regression: Date.setUTCFullYear() broken

        Reviewed by John.

        * kjs/date_object.cpp:
        (KJS::makeTime): Changed to use localtime_r to avoid blowing away the results from
        a previous call to localtime farther up the stack.

=== JavaScriptCore-416.9 ===

2005-09-22  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-Den-branch

    2005-09-20  Geoffrey Garen  <ggaren@apple.com>
