@@ -58,26 +58,34 @@ using namespace KJS;
     return Completion(Normal);
 
 #define KJS_CHECKEXCEPTION \
-  if (exec->hadException()) \
+  if (exec->hadException()) { \
+    setExceptionDetailsIfNeeded(exec); \
     return Completion(Throw, exec->exception()); \
+  } \
   if (Collector::outOfMemory()) \
     return Completion(Throw, Error::create(exec,GeneralError,"Out of memory"));
 
 #define KJS_CHECKEXCEPTIONVALUE \
-  if (exec->hadException()) \
+  if (exec->hadException()) { \
+    setExceptionDetailsIfNeeded(exec); \
     return exec->exception(); \
+  } \
   if (Collector::outOfMemory()) \
     return Undefined(); // will be picked up by KJS_CHECKEXCEPTION
 
 #define KJS_CHECKEXCEPTIONREFERENCE \
-  if (exec->hadException()) \
+  if (exec->hadException()) { \
+    setExceptionDetailsIfNeeded(exec); \
     return Reference::makeValueReference(Undefined());; \
+  } \
   if (Collector::outOfMemory()) \
     return Reference::makeValueReference(Undefined()); // will be picked up by KJS_CHECKEXCEPTION
 
 #define KJS_CHECKEXCEPTIONLIST \
-  if (exec->hadException()) \
+  if (exec->hadException()) { \
+    setExceptionDetailsIfNeeded(exec); \
     return List(); \
+  } \
   if (Collector::outOfMemory()) \
     return List(); // will be picked up by KJS_CHECKEXCEPTION
 
@@ -153,6 +161,17 @@ Value Node::throwError(ExecState *exec, ErrorType e, const char *msg, Identifier
   delete [] message;
 
   return result;
+}
+
+void Node::setExceptionDetailsIfNeeded(ExecState *exec)
+{
+    if (exec->exception().isA(ObjectType)) {
+        ObjectImp *exception = static_cast<ObjectImp *>(exec->exception().imp());
+        if (!exception->hasProperty(exec, "line") || !exception->hasProperty(exec, "sourceURL")) {
+            exception->put(exec, "line", Number(line));
+            exception->put(exec, "sourceURL", String(sourceURL));
+        }
+    }
 }
 
 // ------------------------------ StatementNode --------------------------------
