@@ -1,3 +1,15 @@
+2005-09-30  Timothy Hatcher  <timothy@apple.com>
+
+		<rdar://problem/4277521> JS exceptions don't carry file/line information (3327)
+
+        Reviewed by Geoff someone.
+
+		Sends file and line numbers with JS exceptions.
+
+        * kjs/nodes.cpp:
+        (Node::setExceptionDetailsIfNeeded):
+        * kjs/nodes.h:
+
 === JavaScriptCore-416.11 ===
 
 2005-09-30  Timothy Hatcher  <timothy@apple.com>
